@@ -30,7 +30,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 @Service
 public class ParticipantFightStatisticsProvider extends CrudProvider<ParticipantFightStatistics, Integer, ParticipantFightStatisticsRepository> {
@@ -161,7 +160,7 @@ public class ParticipantFightStatisticsProvider extends CrudProvider<Participant
 
     private void populateScores(ParticipantFightStatistics participantFightStatistics, List<Score> scores) {
         //Remove null values
-        scores = scores.parallelStream().filter(Objects::nonNull).collect(Collectors.toList());
+        scores = scores.parallelStream().filter(Objects::nonNull).toList();
         for (final Score score : scores) {
             switch (score) {
                 case MEN -> participantFightStatistics.setMenNumber(participantFightStatistics.getMenNumber() + 1);
@@ -181,7 +180,7 @@ public class ParticipantFightStatisticsProvider extends CrudProvider<Participant
 
     private void populateReceivedScores(ParticipantFightStatistics participantFightStatistics, List<Score> scores) {
         //Remove null values
-        scores = scores.parallelStream().filter(Objects::nonNull).collect(Collectors.toList());
+        scores = scores.parallelStream().filter(Objects::nonNull).toList();
         for (final Score score : scores) {
             switch (score) {
                 case MEN ->
